# relevanced

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  example.py  main.py  mkdocs.yml  relevanced.sublime-project  run_func_test.py
src/: .gitignore  Article.h  CMakeLists.txt  Centroid.cpp  Centroid.h  CentroidFactory.h  CentroidManager.cpp  CentroidManager.h  CentroidUpdateWorker.cpp  CentroidUpdateWorker.h  CentroidUpdater.cpp  CentroidUpdater.h  CentroidUpdaterFactory.cpp  CentroidUpdaterFactory.h  DebouncedQueue.h  Debouncer.h  Document.h  DocumentProcessingWorker.cpp  DocumentProcessingWorker.h  DocumentProcessor.cpp  DocumentProcessor.h  ProcessedArticle.h  ProcessedCentroid.cpp  ProcessedCentroid.h  ProcessedDocument.cpp  ProcessedDocument.h  ProcessedTfidf.h  RelevanceCollection.h  RelevanceCollectionManager.cpp  RelevanceCollectionManager.h  RelevanceScoreWorker.cpp  RelevanceScoreWorker.h  RelevanceServer.cpp  RelevanceServer.h  RelevanceServerOptions.h  RelevanceWorker.h  RelevancedProtocol.thrift  ServerBuilder.h  SimilarityScoreWorker.cpp  SimilarityScoreWorker.h  (+24 more)
src/bench/: runner.cpp
src/centroid_update_worker/: CentroidUpdateWorker.cpp  CentroidUpdateWorker.h  CentroidUpdater.cpp  CentroidUpdater.h  CentroidUpdaterFactory.cpp  CentroidUpdaterFactory.h  DocumentAccumulator.cpp  DocumentAccumulator.h  DocumentAccumulatorFactory.cpp  DocumentAccumulatorFactory.h
src/centroid_update_worker/test_functional/: test_CentroidUpdateWorker.cpp
src/centroid_update_worker/test_unit/: test_CentroidUpdateWorker.cpp  test_CentroidUpdater.cpp  test_DocumentAccumulator.cpp
src/document_processing_worker/: DocumentProcessingWorker.cpp  DocumentProcessingWorker.h  DocumentProcessor.cpp  DocumentProcessor.h
src/document_processing_worker/test_functional/: test_DocumentProcessingWorker.cpp
src/document_processing_worker/test_unit/: test_DocumentProcessingWorker.cpp  test_DocumentProcessor.cpp
src/libunicode/: CodePointIterator.cpp  CodePointIterator.h  UnicodeBlock.cpp  UnicodeBlock.h  code_point_support.cpp  code_point_support.h
src/libunicode/test_unit/: test_CodePointIterator.cpp  test_UnicodeBlock.cpp  test_code_point_support.cpp
src/mem_checks/: memcheck_DocumentProcessor.cpp  memcheck_Persistence.cpp  memcheck_libstemmer.cpp
src/models/: Centroid.cpp  Centroid.h  Document.h  ProcessedDocument.h  WordVector.cpp  WordVector.h
src/models/test_unit/: test_WordVector.cpp
src/persistence/: CentroidDB.cpp  CentroidDB.h  CentroidDBHandle.cpp  CentroidDBHandle.h  CentroidMetadataDb.cpp  CentroidMetadataDb.h  ClassifierDB.cpp  ClassifierDB.h  ClassifierDBHandle.cpp  ClassifierDBHandle.h  CollectionDB.cpp  CollectionDB.h  CollectionDBCache.cpp  CollectionDBCache.h  CollectionDBHandle.cpp  CollectionDBHandle.h  ColonPrefixedRockHandle.cpp  ColonPrefixedRockHandle.h  DocumentDB.cpp  DocumentDB.h  DocumentDBCache.cpp  DocumentDBCache.h  DocumentDBHandle.cpp  DocumentDBHandle.h  InMemoryRockHandle.cpp  InMemoryRockHandle.h  Persistence.cpp  Persistence.h  PersistenceService.cpp  PersistenceService.h  PrefixedRockHandle.cpp  PrefixedRockHandle.h  RockHandle.cpp  RockHandle.h  SqlDb.cpp  SqlDb.h  SyncPersistence.cpp  SyncPersistence.h  exceptions.h  sqlUtil.h
src/persistence/test_functional/: slow_RockHandle_test.cpp
src/persistence/test_unit/: test_CentroidMetadataDb.cpp  test_InMemoryRockHandle.cpp  test_Persistence.cpp  test_SyncPersistence.cpp
src/release_metadata/: release_metadata.cpp  release_metadata.h
src/serialization/: bytes.h  serializer_Centroid.h  serializer_ProcessedDocument.h  serializer_WordVector.h  serializer_details.h  serializers.cpp  serializers.h
src/serialization/test_unit/: test_CentroidSerialization.cpp
src/server/: RelevanceServer.cpp  RelevanceServer.h  RelevanceServerOptions.cpp  RelevanceServerOptions.h  ServerBuilder.h  ThriftRelevanceServer.cpp  ThriftRelevanceServer.h  ThriftServerWrapper.cpp  ThriftServerWrapper.h  simpleServerBuilders.cpp  simpleServerBuilders.h
src/server/test_functional/: RelevanceServerTestCtx.h  test_RelevanceServer.cpp  test_RelevanceServer_centroid_crud.cpp  test_RelevanceServer_centroid_document_actions.cpp  test_RelevanceServer_document_crud.cpp  test_RelevanceServer_get_similarity.cpp
src/similarity_score_worker/: SimilarityScoreWorker.cpp  SimilarityScoreWorker.h
src/stemmer/: PorterStemmer.cpp  PorterStemmer.h  StemmerIf.h  StemmerManagerIf.h  ThreadSafeStemmerManager.cpp  ThreadSafeStemmerManager.h  ThreadSafeUtf8Stemmer.h  Utf8Stemmer.cpp  Utf8Stemmer.h  porter_stemmer.c  porter_stemmer.h
src/stemmer/test_unit/: test_Utf8Stemmer.cpp
src/stopwords/: StopwordFilter.cpp  StopwordFilter.h  english_stopwords.cpp  english_stopwords.h  french_stopwords.cpp  french_stopwords.h  german_stopwords.cpp  german_stopwords.h  italian_stopwords.cpp  italian_stopwords.h  russian_stopwords.cpp  russian_stopwords.h  spanish_stopwords.cpp  spanish_stopwords.h  stopwords.h
src/test/: CMakeLists.txt
src/test_unit/: MockRock.h  MockSyncPersistence.h  TestHelpers.h  runTests.cpp  test_CentroidDBHandle.cpp  test_CentroidUpdateWorker.cpp  test_ClassifierDBHandle.cpp  test_CollectionDBHandle.cpp  test_DocumentDBHandle.cpp  test_DocumentProcessingWorker.cpp  test_DocumentProcessor.cpp  test_DocumentSerialization.cpp  test_SimilarityScoreWorker.cpp  test_StopwordFilter.cpp  test_SyncPersistence.cpp
src/testing/: MockClock.h  MockRock.h  MockSyncPersistence.h  TestHelpers.h
src/text_util/: ConllTokenIterator.cpp  ConllTokenIterator.h  DestructiveConllTokenIterator.cpp  DestructiveConllTokenIterator.h  ScoredWord.cpp  ScoredWord.h  StringView.cpp  StringView.h  TextScorer.cpp  TextScorer.h  ThreadSafeUtf8Stemmer.h  Utf8Stemmer.cpp  Utf8Stemmer.h  WordAccumulator.cpp  WordAccumulator.h
src/tokenizer/: DestructiveConllTokenIterator.cpp  DestructiveConllTokenIterator.h  DestructiveTokenIterator.cpp  DestructiveTokenIterator.h  Tokenizer.cpp  Tokenizer.h
src/util/: Clock.h  ConcurrentMap.h  Debouncer.h  MultiVersionPtr.h  Sha1Hasher.h  util.cpp  util.h
(+172 files in other folders)
